name:                dequeue
version:             0.1.0.0
category:            Hacktoberfest17
build-type:          Simple
cabal-version:       >=1.10

executable dequeue
  hs-source-dirs:      .
  main-is:             dequeue.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , lens
                     , mtl
  default-language:    Haskell2010
